--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,8 @@ set(REQUIRED_QT_VERSION 6.5.0)
 find_package(Qt6Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 find_package(Qt6Svg ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 if (UNIX AND NOT APPLE AND NOT ANDROID)
-  find_package(Qt6DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+    find_package(Qt6DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+    set(HAVE_QTDBUS ${Qt6DBus_FOUND})
 endif()
 if (KICONTHEMES_USE_QTQUICK)
   find_package(Qt6 ${REQUIRED_QT_VERSION} NO_MODULE REQUIRED Qml Quick)
