Make breeze-icons soft-mandatory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,11 @@ include(ECMQmlModule)
 
 set(EXCLUDE_DEPRECATED_BEFORE_AND_AT 0 CACHE STRING "Control the range of deprecated API excluded from the build [default=0].")
 
+if (ANDROID)
+  option(WITH_BREEZEICONS "Make breeze icons required" OFF)
+else()
+  option(WITH_BREEZEICONS "Make breeze icons required" ON)
+endif()
 option(KICONTHEMES_USE_QTQUICK "Build QML plugin using Qt6Qml" ON)
 option(BUILD_QCH "Build API documentation in QCH format (for e.g. Qt Assistant, Qt Creator & KDevelop)" OFF)
 add_feature_info(QCH ${BUILD_QCH} "API documentation in QCH format (for e.g. Qt Assistant, Qt Creator & KDevelop)")
@@ -60,7 +65,12 @@ find_package(KF6I18n ${KF_DEP_VERSION} REQUIRED)
 find_package(KF6ConfigWidgets ${KF_DEP_VERSION} REQUIRED)
 find_package(KF6WidgetsAddons ${KF_DEP_VERSION} REQUIRED)
 find_package(KF6ColorScheme ${KF_DEP_VERSION} REQUIRED)
-find_package(KF6BreezeIcons ${KF_DEP_VERSION} QUIET)
+
+if (WITH_BREEZEICONS)
+  find_package(KF6BreezeIcons ${KF_DEP_VERSION} REQUIRED)
+else()
+  find_package(KF6BreezeIcons ${KF_DEP_VERSION} QUIET)
+endif()
 
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 remove_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
