--- a/KF6IconThemesConfig.cmake.in
+++ b/KF6IconThemesConfig.cmake.in
@@ -16,6 +16,10 @@ if (NOT @BUILD_SHARED_LIBS@)
     find_dependency(KF6ConfigWidgets "@KF_DEP_VERSION@")
     find_dependency(KF6WidgetsAddons "@KF_DEP_VERSION@")
     find_dependency(KF6ColorScheme "@KF_DEP_VERSION@")
+
+    if (NOT ANDROID)
+        find_package(KF6BreezeIcons "@KF_DEP_VERSION@")
+    endif()
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF6IconThemesTargets.cmake")
