Windows tests work now
require them to keep working

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -14,4 +14,4 @@ Dependencies:
 
 Options:
   test-before-installing: True
-  require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows/Qt5', 'Android' ]
+  require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows', 'Android' ]
