--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,12 +47,21 @@ ecm_setup_version(PROJECT
 set(REQUIRED_QT_VERSION 6.5.0)
 find_package(Qt6Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 find_package(Qt6Svg ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
-if (UNIX AND NOT APPLE AND NOT ANDROID)
-    find_package(Qt6DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
-    set(HAVE_QTDBUS ${Qt6DBus_FOUND})
-endif()
+
 if (KICONTHEMES_USE_QTQUICK)
   find_package(Qt6 ${REQUIRED_QT_VERSION} NO_MODULE REQUIRED Qml Quick)
+endif()
+
+# shall we use DBus?
+# enabled per default on Linux & BSD systems
+set(USE_DBUS_DEFAULT OFF)
+if(UNIX AND NOT APPLE AND NOT ANDROID AND NOT HAIKU)
+    set(USE_DBUS_DEFAULT ON)
+endif()
+option(USE_DBUS "Build components using DBus" ${USE_DBUS_DEFAULT})
+if(USE_DBUS)
+    find_package(Qt6DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+    set(HAVE_QTDBUS ${Qt6DBus_FOUND})
 endif()
 
 find_package(KF6Archive ${KF_DEP_VERSION} REQUIRED)
