Allow building without breeze-icons
Makes it possible to build kiconthemes without breeze on non-android
platforms as well.

This is useful to make it possible to build on systems where we are
pulling kiconthemes as a dependency but not really relying on it.

Signed-off-by: Victoria Fischer <victoria.fischer@mbition.io>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+
 add_subdirectory(tools/kiconfinder)
 if (KICONTHEMES_USE_QTQUICK)
     add_subdirectory(qml)
