--- a/KF6IconThemesConfig.cmake.in
+++ b/KF6IconThemesConfig.cmake.in
@@ -17,7 +17,7 @@ if (NOT @BUILD_SHARED_LIBS@)
     find_dependency(KF6WidgetsAddons "@KF_DEP_VERSION@")
     find_dependency(KF6ColorScheme "@KF_DEP_VERSION@")
 
-    if (NOT ANDROID)
+    if (@USE_BreezeIcons@)
         find_package(KF6BreezeIcons "@KF_DEP_VERSION@")
     endif()
 endif()
