Set up KColorSchemeManager on Android as well
KIconThemes is meanwhile used on Android as well, for the icon recoloring
in dark mode, via the QQC2 Breeze style. So make it behave the same on
all platforms for color schemes and avoid applications having to manually
create a KColorSchemeManager instance.

--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -8,7 +8,7 @@ platforms:
     - name: Windows
     - name: macOS
     - name: Android
-      note: Porting aid, reduced functionality
+      note: Reduced functionality
 portingAid: false
 deprecated: false
 release: true
