--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,3 +15,4 @@ Dependencies:
 Options:
  test-before-installing: True
  require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows', 'Android']
+ enable-lsan: True
